--- a/Outros/Aula13.html
+++ b/Outros/Aula13.html
@@ -9,57 +9,61 @@
 
 <body>
     <header>
-    <h1>JOGOS FIAP 2024</h1>
-    <!-- MENU DE NAVEGAÇÃO -->
-        <nav>
-            <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">Experiências</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">contato</a></li>
-            </ul>
-        </nav>
+        <div>
+            <h1>JOGOS FIAP 2024</h1>
+            <!-- MENU DE NAVEGAÇÃO -->
+            <nav>
+                <ul>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">Experiências</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-    <!--BANNER COM DESTAQUE-->
-    <section class="banner">
-        <div>
-            <h2>Desafie-se nos jogos fiap 2024</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, quam?</p>
-            <a href="#" class="btn">Reserve Agora</a>
-        </div>
-    </section>
-    <!-- CARD COM EXPERIENCIAS -->
-    <section class="experiencia">
-        <div class="card-grid">
-            <h2>Nossas Experiência</h2>
-            <!-- grid de cards -->
-            <div id="card-01" class="card">
-                <img src="Img/Aula13/Jogo01.png" alt="Imagem sala de jogo 01">
-                <div class="card-content">
-                    <h1>Sala jogo 01</h1>
-                    <p>Uma Sala emocionante cheia de misterios a serem resolvidos. prepare-se
-                        para um desafio insesquecivel </p>
+        <!--BANNER COM DESTAQUE-->
+        <section class="banner">
+            <div>
+                <h2>Desafie-se nos jogos fiap 2024</h2>
+                <p>Viva experiência unicas com os jogos de HTML,CSS,JS,ETC.</p>
+                <a href="#" class="btn">Reserve Agora</a>
+            </div>
+        </section>
+        <!-- CARD COM EXPERIENCIAS -->
+        <section class="experiencia">
+            <div class="container">
+                <h2>Nossas Experiência</h2>
+                <div class="card-grid">
+                    <!-- grid de cards -->
+                    <div id="card-01" class="card">
+                        <img src="Img/Aula13/Jogo01.png" alt="Imagem sala de jogo 01">
+                        <div class="card-content">
+                            <h1>Sala jogo 01</h1>
+                            <p>Uma Sala emocionante cheia de misterios a serem resolvidos. prepare-se
+                                para um desafio insesquecivel </p>
+                        </div>
+                    </div>
+                    <div id="card-02" class="card">
+                        <img src="Img/Aula13/Jogo02.jpg" alt="Imagem sala de jogo 02">
+                        <div class="card-content">
+                            <h1>Sala jogo 02</h1>
+                            <p>Uma Sala emocionante cheia de misterios a serem resolvidos. prepare-se
+                                para um desafio insesquecivel </p>
+                        </div>
+                    </div>
+                    <div id="card-03" class="card">
+                        <img src="Img/Aula13/jogo03.jpg" alt="Imagem sala de jogo 03">
+                        <div class="card-content">
+                            <h1>Sala jogo 03</h1>
+                            <p>Uma Sala emocionante cheia de misterios a serem resolvidos. prepare-se
+                                para um desafio insesquecivel </p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div id="card-02" class="card">
-                <img src="Img/Aula13/Jogo02.jpg" alt="Imagem sala de jogo 02">
-                <div class="card-content">
-                    <h1>Sala jogo 02</h1>
-                    <p>Uma Sala emocionante cheia de misterios a serem resolvidos. prepare-se
-                        para um desafio insesquecivel </p>
-                </div>
-            </div>
-            <div id="card-03" class="card">
-                <img src="Img/Aula13/jogo03.jpg" alt="Imagem sala de jogo 03">
-                <div class="card-content">
-                    <h1>Sala jogo 03</h1>
-                    <p>Uma Sala emocionante cheia de misterios a serem resolvidos. prepare-se
-                        para um desafio insesquecivel </p>
-                </div>
-            </div>
-            </div>
-    </section>
+        </section>
     </main>
     <!-- FOOTER COM CONTATOS-->
     <footer>
@@ -67,6 +71,35 @@
             <p> 2024 - Jogos FIAP. Todos os direitos reservados</p>
         </div>
     </footer>
+
+
+
+    <!-- MODAL PARA FORMULARIO DE CONTATO -->
+    <div id="contatomodal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">X</span>
+            <h2>Entre em contato</h2>
+            <form>
+                <label for="inputName">Nome:</label>
+                <input type="text" id="inputName" name="name" required />
+                <label for="inputEmail">Email:</label>
+                <input type="email" id="inputEmail" name="email" required />
+                <label for="inputTel">Telefone:</label>
+                <input type="tel" id="inputTel" name="tel" required />
+                <button type="submit" class="btn">Enviar</button>
+            </form>
+        </div>
+    </div>
+    <script>
+        window.onload = function () {
+            var modal = document.getElementById('contatomodal');
+            modal.style.display = 'block';
+            document.querySelector('.close-btn').onclick = function () {
+                modal.style.display = 'none';
+            };
+
+        }
+    </script>
 </body>
 
 </html>
