--- a/Caderno.html
+++ b/Caderno.html
@@ -21,34 +21,43 @@
         <div class="Pagbox">
             <h1 class="Pag-tittle">Lista de exercicios e aulas</h1>
             <p>
-                Esta página foi criada para armazenar e revisar os conteúdos das aulas de Front-End 
+                Esta página foi criada para armazenar e revisar os conteúdos das aulas de Front-End
                 Design Engineering ministradas por Jonas Kimio Isiki.
             </p>
             <p>
-                Na seção de aulas, você encontrará códigos copiados e anotações das aulas, tanto 
-                online quanto presenciais. Os exercícios incluem códigos que eu, Jonas, desenvolvi 
+                Na seção de aulas, você encontrará códigos copiados e anotações das aulas, tanto
+                online quanto presenciais. Os exercícios incluem códigos que eu, Jonas, desenvolvi
                 ao realizar as atividades entregues nas aulas, abrangendo exercícios e tarefas avaliativas.
             </p>
             <p>
-                Infelizmente, nem todas as atividades e páginas estão liberadas, pois não as realizei ainda 
-                ou eu esqueci de salvar na máquina. (A atividade 2 não é possivel acessar pois essa página que você esta lendo agora é a atividade 2) 
-                todas as atividades, aulas e provas que não consegui colocar no site eles estarão visiveis mas não interagiveis 
+                Infelizmente, nem todas as atividades e páginas estão liberadas, pois não as realizei ainda
+                ou eu esqueci de salvar na máquina. (A atividade 2 não é possivel acessar pois essa página que você esta
+                lendo agora é a atividade 2)
+                todas as atividades, aulas e provas que não consegui colocar no site eles estarão visiveis mas não
+                interagiveis
             </p>
             <p>
-                Futuramente pretendo poder substituir as fotos do código para um meio de vocês poderem copiar o código com um apertar de um botão. 
+                Futuramente pretendo poder substituir as fotos do código para um meio de vocês poderem copiar o código
+                com um apertar de um botão.
                 mas por agora o que eu recomendo é:
             </p>
             <p>
-                Utilizando o F12 pelo chrome ou Botão Direito do Mouse + Inspecionar você poderá ver o código do exercicio caso a foto do código 
-                não esteja completo ou deseja ler o código mais detalhado (que no caso nem sempre está completo e a foto pode estar um pouco borrada)
+                Utilizando o F12 pelo chrome ou Botão Direito do Mouse + Inspecionar você poderá ver o código do
+                exercicio caso a foto do código
+                não esteja completo ou deseja ler o código mais detalhado (que no caso nem sempre está completo e a foto
+                pode estar um pouco borrada)
             </p>
             <p>
-                No código você verá esse simbulo "< ! -- (texto) -- >" cujo são os comentários que utilizamos para explicar cada comando no código das 
-                aulas apenas utilize eles se queira colocar um comentário no código pois qualquer coisa que você coloque dentro do código não irá rodar
+                No código você verá esse simbulo "< ! -- (texto) -->" cujo são os comentários que utilizamos para
+                    explicar cada comando no código das
+                    aulas apenas utilize eles se queira colocar um comentário no código pois qualquer coisa que você
+                    coloque dentro do código não irá rodar
             </p>
             <p>
-                Este site será constantemente atualizado com várias funções que estou aprendendo nas aulas e que irei pesquisar na internet. 
-                Aproveito para pedir desculpas pela TOTAL DESORGANIZAÇÃO dos arquivos no GitHub; ainda não entendo completamente como o sistema de commits funciona.
+                Este site será constantemente atualizado com várias funções que estou aprendendo nas aulas e que irei
+                pesquisar na internet.
+                Aproveito para pedir desculpas pela TOTAL DESORGANIZAÇÃO dos arquivos no GitHub; ainda não entendo
+                completamente como o sistema de commits funciona.
             </p>
             <p>
                 Espero que você goste do meu trabalho. Agradeço por dedicar um tempo para ler este texto!
@@ -57,9 +66,15 @@
         </div>
         <nav id="lista">
             <ul>
-                <li><h1>Aulas</h1></li>
-                <li><h1>Exercicios</h1></li>
-                <li><h1>Provas</h1></li>
+                <li>
+                    <h1>Aulas</h1>
+                </li>
+                <li>
+                    <h1>Exercicios</h1>
+                </li>
+                <li>
+                    <h1>Provas</h1>
+                </li>
             </ul>
             <ul>
                 <li><a href="#A1">Aula 1</a>
@@ -88,7 +103,7 @@
             </ul>
             <ul>
                 <li><a href="#A6">Aula 6</a>
-                <li>
+                <li><a href="Outros/Atividade06.html" target="_blank">Atividade 6</a>
                 <li>
             </ul>
             <ul>
@@ -183,8 +198,8 @@
 
         <h1 class="Pag-tittle" id="A12">Aula 12</h1>
         <p><a href="Outros/Aula12.html" target="_blank">
-            <img src="Img/PrintScreen/Ca12p1.png" alt="Aula 12 parte 1">
-            <img src="Img/PrintScreen/Ca12p2.png" alt="Aula 12 parte 2"></a></p>
+                <img src="Img/PrintScreen/Ca12p1.png" alt="Aula 12 parte 1">
+                <img src="Img/PrintScreen/Ca12p2.png" alt="Aula 12 parte 2"></a></p>
         <p><a href="#home" class="bt">Voltar ao topo</a></p>
 
         <h1 class="Pag-tittle" id="A13">Aula 13</h1>
